# mnist-project-gpu-computing

./: CMakeLists.txt  Makefile  README.md  download_data.py  run.sh
src/: image_processor.cu  main.cu
